--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -9,6 +9,11 @@
       "tablet",
       "2in1"
     ],
+    "requestPermissions": [
+      { "name": "ohos.permission.INTERNET",
+        "reason": "$string:internet_reason_desc"
+      }
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
@@ -45,7 +50,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ]
   }
